--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html lang="en">
 
 <head>
-    <title>TUF RGB Lively Wallpaper - berkantkz</title>
+    <title>Rose RGB Lively Wallpaper - berkantkz</title>
     <!-- meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="ASUS TUF RGB Logo for Lively Wallpaper" />
+    <meta name="description" content="ROSE RGB Logo for Lively Wallpaper" />
 
     <meta name="keywords"
-        content="berkantkz, berkant, lorde help me, asus rgb logo, lively wallpaper asus, lively wallpaper tuf, tuf rgb logo" />
+        content="berkantkz, berkant, lorde help me, rose rgb logo, lively wallpaper rose, lively wallpaper rose, rose rgb logo" />
     <meta name="author" content="berkantkz">
 
     <style>
@@ -158,7 +158,7 @@
     </style>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117578942-3"></script>
+    <script async src="https://rose-animated1.webstarts.com/?r=1654983341790"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
