--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html lang="en">
 
 <head>
-    <title>TUF RGB Lively Wallpaper - berkantkz</title>
+    <title>RARE RGB Lively Wallpaper - berkantkz</title>
     <!-- meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="ASUS TUF RGB Logo for Lively Wallpaper" />
+    <meta name="description" content="Rare RGB Logo for Lively Wallpaper" />
 
     <meta name="keywords"
-        content="berkantkz, berkant, lorde help me, asus rgb logo, lively wallpaper asus, lively wallpaper tuf, tuf rgb logo" />
+        content="berkantkz, berkant, lorde help me, rare rgb logo, lively wallpaper rare, lively wallpaper tuf, tuf rgb logo" />
     <meta name="author" content="berkantkz">
 
     <style>
